@startuml
'https://plantuml.com/class-diagram

abstract class PC {
    #String main, cpu, ram, storage, screen;
    #int val_main, val_ram, val_storage, val_screen;
    +{abstract} String build()
    +{abstract} int value()
}

class ConcretePC {}

abstract class DecoratorPC {}

class upgradeRam {
    #String n_ram
    #String val_ram
}

class upgradeCPU {
    #String n_cpu
    #String val_cpu
}

PC <|-- ConcretePC
PC <-- DecoratorPC
DecoratorPC --> PC:pc
DecoratorPC <|-- upgradeRam
DecoratorPC <|-- upgradeCPU

@enduml